--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@ layout: compress
 
   <!-- {% include contact-section.html %} -->
 
-  {% include footer.html %}
+  <!-- {% include footer.html %} -->
 
 </body>
 
