--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,7 +21,7 @@ layout: default
 <!-- /page title -->
 
 <!-- about -->
-<section class="section pt-5">
+<section class="section">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
