--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -21,9 +21,9 @@ layout: default
 <!-- /page title -->
 
 <!-- about -->
-<section class="section pt-5">
+<section class="section pt-5" style = "height: 60vh">
   <div class="container">
-    <div class="row">
+    <div class="row" style = "height: 100%">
       <div class="col-md-12">
         {{ content }}
       </div>
