--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -12,18 +12,18 @@ layout: default
   </div>
   <!-- background shapes -->
   <!-- <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-bg-top.png" alt="illustrations" class="bg-shape-1 w-100"> -->
-  <img src="{{ site.baseurl }}/assets/images/illustrations/dots-group-sm.png" alt="illustrations" class="bg-shape-2">
+  <!-- <img src="{{ site.baseurl }}/assets/images/illustrations/dots-group-sm.png" alt="illustrations" class="bg-shape-2"> -->
   <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-yellow.png" alt="illustrations" class="bg-shape-3">
   <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-orange.png" alt="illustrations" class="bg-shape-4">
-  <img src="{{ site.baseurl }}/assets/images/illustrations/dots-group-cyan.png" alt="illustrations" class="bg-shape-5">
+  <!-- <img src="{{ site.baseurl }}/assets/images/illustrations/dots-group-cyan.png" alt="illustrations" class="bg-shape-5"> -->
   <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-cyan-lg.png" alt="illustrations" class="bg-shape-6">
 </section>
 <!-- /page title -->
 
 <!-- about -->
-<section class="section pt-5" style = "height: 60vh">
+<section class="section pt-5" style = "height: 100vh">
   <div class="container">
-    <div class="row" style = "height: 100%">
+    <div class="row">
       <div class="col-md-12">
         {{ content }}
       </div>
