--- a/_includes/education-section.html
+++ b/_includes/education-section.html
@@ -1,6 +1,6 @@
 {% if site.data.settings.education %}
 <!-- education -->
-<section class="section position-relative">
+<!-- <section class="section position-relative">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -24,6 +24,6 @@
   </div>
   <!-- bg image -->
   <img class="img-fluid edu-bg-image w-100" src="{{ site.baseurl }}/assets/images/backgrounds/education-bg.png" alt="bg-image">
-</section>
+</section> -->
 <!-- /education -->
 {% endif %}
