--- a/_includes/portfolio-section.html
+++ b/_includes/portfolio-section.html
@@ -1,6 +1,6 @@
 {% if site.data.settings.portfolio-home-items %}
 <!-- portfolio -->
-<section class="section">
+<!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -23,5 +23,5 @@
     </div>
   </div>
 </section>
-<!-- /portfolio -->
+/portfolio -->
 {% endif %}
