--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="text-white font-tertiary">Blogs</h1>
+        <h1 class="text-white font-tertiary">Portfolio</h1>
       </div>
     </div>
   </div>
@@ -37,10 +37,10 @@ layout: default
   </div>
 </section>
 
-{% if site.data.settings.disqus-identifier %} {% include disqus-comments.html %} {% endif %}
+<!-- {% if site.data.settings.disqus-identifier %} {% include disqus-comments.html %} {% endif %} -->
 
 <!-- blog -->
-<section class="section">
+<!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -51,5 +51,5 @@ layout: default
       {% endfor %}
     </div>
   </div>
-</section>
+</section> -->
 <!-- /blog -->
